# DeepFaceCCTV

./: .gitignore  =4.8.0  Readme.md  cctvMultiBrain.py  config_example.json  pyproject.toml  requirement.txt  requirements.txt  test.py
builder/: buildDataSet.py  db_ops.py  embedder.py  gpucheck.py
core/: __init__.py  app_logger.py  detector.py  drawing.py  gallery.py  logger.py  pipeline.py  quality.py  recogniser.py  tracker.py
dashboard/: app.py
dashboard/templates/: index.html
deepfacecctv/: __init__.py  __main__.py  cli.py  config.py  pipeline_adapter.py
env312/: pyvenv.cfg
env312/Scripts/: activate  activate.bat
launcher/: main.py  service.py
productionLevel/: ClaheTest.py  brain.py  config.py  enroller.py  eyes copy.py  eyes.py  main.py  register_student.py
testLevel/: autoEnroller.py  brain.py  config.py  eyes.py  main.py  multiCam.py  singleCam.py
venv312/: pyvenv.cfg
venv312/Scripts/: activate  activate.bat
